--- a/app/assets/stylesheets/less/_responsive.less
+++ b/app/assets/stylesheets/less/_responsive.less
@@ -1,4 +1,13 @@
 @media all and (max-width: 720px){
+    .sidemenu-width {
+      width: 100vw !important;
+    }
+    .sidenav {
+        width: 100vw;
+    }
+    .main-stream {
+       width: 100%;
+    }
     .board-header .title {
         border-radius: 0 !important;
     }
@@ -334,6 +343,7 @@
     .span-hard-wrap {
         min-width: 95%;
         margin-left: 0 !important;
+        width: 100vw;
     }
     .nav-tabs li a {
         padding-left: 5px !important;
@@ -427,11 +437,6 @@
 }
 
 @media all and (max-width:1199px){
-    .user-project-list{
-        .project-name {
-          max-width: 220px !important;
-        }
-    }
     .attachment-files {
         font-size: 12px;
         .attachment-files-header {
