--- a/app/assets/stylesheets/less/_projectList.less
+++ b/app/assets/stylesheets/less/_projectList.less
@@ -50,7 +50,7 @@
   }
 
   .user-ul {
-    margin: 10px 0 0 0;
+    margin: 10px 0 5px 0;
     padding: 0;
     list-style-type: none;
   }
@@ -419,12 +419,15 @@
       padding: 5px;
     }
     .project-name{
-      color: black;
+      color: #000;
       word-wrap: break-word;
       min-width: 50px;
-      max-width: 300px;
+      max-width: 220px;
       text-overflow: ellipsis;
       overflow: hidden;
+      a:hover {
+        color: #4183c4;
+      }
     }
     .project-owner {
       color: grey;
