--- a/app/assets/stylesheets/yobi.less
+++ b/app/assets/stylesheets/yobi.less
@@ -3,7 +3,7 @@
 @import "less/_common.less";
 @import "less/_sprites.less";
 @import "less/_page.less";
-@import "less/_reponsive.less";
+@import "less/_responsive.less";
 @import "less/_yobiUI.less";
 @import "less/_temporary.less";
 @import "less/_markdown.less";
