--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -47,23 +47,82 @@
     <script type="text/javascript">
         $(function() {
             NProgress.configure({minimum: 0.7});
-            /* Set the width of the side navigation to 250px and the right margin of the page content to 250px */
 
-            $("#open-btn").on("click", function () {
-                var $sidebar = $("#mySidenav");
-                if( $sidebar.width() !== 0){
-                    $sidebar.width("0").css("border", "none");
-                    document.getElementById("main").removeEventListener("click", closeNav, true);
-                } else {
-                    $sidebar.width("400px").css("border", "1px solid #999");
-                    document.getElementById("main").addEventListener("click", closeNav, true);
+            /* Set side navigation */
+            var $sidebar = $("#mySidenav");
+
+            $("#main").on("click", function(event){
+                if( $sidebar.width() !== 0 && $(event.target).parents("#mySidenav").length == 0) {
+                    closeSidebar($sidebar);
                 }
             });
 
-            /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
-            function closeNav() {
-                document.getElementById("mySidenav").style.width = "0";
+            $("#sidebar-open-btn").on("click", function (event) {
+                $(".index-menu").hide();
+
+                if( $sidebar.width() !== 0){
+                    closeSidebar($sidebar);
+                } else {
+                    openSidebar($sidebar);
+                }
+            });
+
+            function closeSidebar($sidebar) {
+                $sidebar.width("0").css("border", "none");
+                $(".index-menu").show();
+                $(".main-stream").removeClass("span7").addClass("span12");
             }
+
+            function openSidebar($sidebar){
+                $sidebar.width("400px").css("border", "1px solid #ccc");
+                $(".main-stream").removeClass("span12").addClass("span7");
+                $(".search-input").focus();
+            }
+
+            var KEY_CODE = {
+                ESC: 27
+            };
+
+            // used for new project list ui
+            $(".right-menu").on('click', ".myProjectList, a[href='#recentlyVisited'], a[href='#createdByMe'], a[href='#watching'], a[href='#joinmember']", function() {
+                setTimeout(function focusToProjectSearchInput() {
+                    var $projectSearch = $('.project-search');
+                    var $orgSearch = $('.org-search');
+                    $projectSearch.focus();
+                    if(!$projectSearch.val()){
+                        $projectSearch.val($orgSearch.val());
+                    }
+                    $orgSearch.val("");
+                }, 200);
+
+            });
+
+            $('.myOrganizationList').on('click', function focusToOrgSearchInput(){
+                setTimeout(function () {
+                    var $projectSearch = $('.project-search');
+                    var $orgSearch = $('.org-search');
+                    $orgSearch.focus();
+                    $orgSearch.val($projectSearch.val());
+                    $projectSearch.val("");
+                }, 200);
+            });
+
+            // search by keyword
+            $(".search-input").on("keyup", function() {
+                var value = $(this).val().toLowerCase().trim();
+                $(".user-li").each(function() {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) !== -1);
+                });
+            }).on("keydown.moveCursorFromInputform", function(e) {
+                switch (e.keyCode) {
+                    case KEY_CODE.ESC:
+                        $sidebar.width("0").css("border", "none");
+                        $indexMenu.show();
+                        break;
+                    default:
+                        break;
+                }
+            });
         });
     </script>
 </body>
