--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -139,6 +139,7 @@
                         </div>
                     </div>
 
+                    <a href="@urlToIssues" class="ybtn" data-button="historyBack"><i class="yobicon-angle-left"></i> @Messages("button.list")</a>
                     @if(issue.canBeDeleted) {
                         @if(isAllowed(UserApp.currentUser(), issue.asResource(), Operation.DELETE)) {
                             <a href="#deleteConfirm" data-toggle="modal" class="ybtn ybtn-danger">@Messages("button.delete")</a>
@@ -302,7 +303,6 @@
 
 
         <div class="board-footer">
-            <a href="@urlToIssues" class="ybtn pull-left" data-button="historyBack">@Messages("button.list")</a>
             @help.keymap("issueDetail", project)
         </div>
     </div>
