usermenu: Make more simpler expression of owner

--- a/app/assets/stylesheets/less/_projectList.less
+++ b/app/assets/stylesheets/less/_projectList.less
@@ -437,6 +437,7 @@
       flex-shrink: 3;
       text-overflow: ellipsis;
       overflow: hidden;
+      max-width: 100px;
       a {
         color: inherit;
         text-decoration: none;
