css: Change issue quick filter link css for lower resolution

--- a/app/assets/stylesheets/less/_temporary.less
+++ b/app/assets/stylesheets/less/_temporary.less
@@ -41,6 +41,7 @@
             color: #fff;
             background: @secondary;
             font-weight:bold;
+            overflow: auto;
             .border-radius (6px);
 
             .num-badge { color:#fff; }
