usermenu: Prevent showing usermenu yet logged in
If the user is not logged in, do not show the usermenu all the time.

--- a/app/views/common/usermenu.scala.html
+++ b/app/views/common/usermenu.scala.html
@@ -84,7 +84,7 @@
           </ul>
       </li>
       } else {
-        <li class="gnb-usermenu-item">
+        <li class="gnb-usermenu-item" id="required-logged-in">
           <a href="@routes.UserApp.loginForm()" class="user-item-btn" data-login="required">
           @Messages("title.login")
           </a>
