--- a/app/assets/stylesheets/less/_sidebar.less
+++ b/app/assets/stylesheets/less/_sidebar.less
@@ -48,7 +48,9 @@
   span.user-menu {
     padding: 5px;
     color: black;
-    font-weight: bold;
+    a:hover {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -71,10 +73,4 @@
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
   transition: margin-left .5s;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
 }
