--- a/app/views/index/index.scala.html
+++ b/app/views/index/index.scala.html
@@ -68,8 +68,9 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $("#toggleIntro").click(function(){
-                $(".site-guide-outer").toggleClass("hide");
-                localStorage.setItem("yobi-intro", !$(".site-guide-outer").hasClass("hide"));
+                var $outerGuide = $(".site-guide-outer");
+                $outerGuide.toggleClass("hide");
+                localStorage.setItem("yobi-intro", !$outerGuide.hasClass("hide"));
             });
 
             if(localStorage.getItem("yobi-intro") != "false"){
@@ -77,7 +78,9 @@
             }
 
             $('.notification-wrap').on('click','[data-toggle="learnmore"]',function(event) {
-                var sTargetId = $(this).data('target'),
+                var $this = $(this);
+                $this.find(".more").toggle();
+                var sTargetId = $this.data('target'),
                     welMessage = $('#'+sTargetId),
                     nHeight;
 
@@ -92,6 +95,27 @@
                 $(welMessage).css('min-height',nHeight);
             });
 
+            function checkOverflow(el) {
+                var curOverflow = el.style.overflow;
+
+                if (!curOverflow || curOverflow === "visible")
+                    el.style.overflow = "hidden";
+
+                var isOverflowing = el.clientWidth < el.scrollWidth
+                        || el.clientHeight < el.scrollHeight;
+
+                el.style.overflow = curOverflow;
+
+                return isOverflowing;
+            }
+
+            $(".message-wrap").each(function(index, value){
+                var $this = $(this);
+                if(checkOverflow($this[0])){
+                    $this.after("<div class='more'>...</div>");
+                }
+            });
+
             // Show side bar menu default and focus to search box
             var requiredLoggedIn = $("#required-logged-in").length === 1;
             if(!requiredLoggedIn){
@@ -102,6 +126,9 @@
                     $("#mySidenav").width("400px").css("border", "1px solid #ccc");
                 }
                 $(".search-input").focus();
+                setTimeout(function () {
+                    $("#main").off("click");
+                }, 1000);
             }
         });
     </script>
