--- a/app/views/index/myProjectList.scala.html
+++ b/app/views/index/myProjectList.scala.html
@@ -9,7 +9,7 @@
 
 @displayProjects(title:String, projects:List[Project], isActive:Boolean = false) = {
     @if(projects.isEmpty) {
-        <div id='no-result' class="no-result">No results</div>
+        <div id="@title" class="no-result tab-pane user-ul @if(isActive){active}">@Messages("title.no.results")</div>
     } else {
         <ul class="tab-pane user-ul @if(isActive){active}" id="@title">
         @for(project <- projects){
@@ -37,7 +37,7 @@
             <div class="search-result">
                 <div class="tab-pane myproject-list-wrap active" >
                     <div class="group">
-                        <input class="search-input project-search" type="text" id="query" autofocus autocomplete="off" placeholder="Type name">
+                        <input class="search-input project-search" type="text" id="query" autofocus autocomplete="off" placeholder="@Messages("title.type.name")">
                         <span class="bar"></span>
                     </div>
                     <div class="subtab-wrap">
@@ -67,7 +67,7 @@
                     <div class="tab-content">
                         @displayProjects("recentlyVisited", currentUser.getVisitedProjects, true)
                         @displayProjects("watching", currentUser.getWatchingProjects("name ASC"))
-                            @displayProjects("createdByMe", Project.findProjectsCreatedByUser(currentUser.loginId, "createdDate desc"))
+                        @displayProjects("createdByMe", Project.findProjectsCreatedByUser(currentUser.loginId, "createdDate desc"))
                         @displayProjects("joinmember", Project.findProjectsJustMemberAndNotOwner(currentUser, "name ASC"))
                     </div>
                 </div>
