notification-list: Change list-alt icon color

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1090,7 +1090,7 @@
                         color: #999;
                     }
                     &.list-alt {
-                        color: orange;
+                        color: #795548;
                     }
                     &.ellipsis-horizontal {
                         color: grey;
