notification-list: Change icon of updated event

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1048,7 +1048,7 @@
                 }
 
                 &:hover {
-                    background: #f1f1f1;
+                    background: #f5f5f5;
                 }
 
                 &:first-child  {
@@ -1070,12 +1070,13 @@
                     vertical-align: top;
                     margin-top: 2px;
                     &.updated {
-                        font-size: 14px;
+                        font-size: 12px;
                         font-weight: bold;
-                        color: #FF9800;
+                        color: white;
                         border: 1px solid;
                         border-radius: 3px;
                         padding: 2px;
+                        background-color: #FF9800;
                     }
 
                     &.closed {color:@state-closed;}
