usermenu: Makes the usermenu disappear if the resolution is less than 720 px

--- a/app/views/index/index.scala.html
+++ b/app/views/index/index.scala.html
@@ -120,15 +120,15 @@
             var requiredLoggedIn = $("#required-logged-in").length === 1;
             if(!requiredLoggedIn){
                 var viewSize = $(window).width();
-                if( viewSize < 720) {
-                    $("#mySidenav").width("100vw").css("border", "1px solid #ccc");
-                } else {
+                if( viewSize > 720) {
                     $("#mySidenav").width("400px").css("border", "1px solid #ccc");
+                    setTimeout(function () {
+                        $("#main").off("click");
+                    }, 1000);
+                } else {
+                    $("#mySidenav").width("100vw").css("border", "1px solid #ccc");
                 }
                 $(".search-input").focus();
-                setTimeout(function () {
-                    $("#main").off("click");
-                }, 1000);
             }
         });
     </script>
