--- a/app/views/index/myProjectList.scala.html
+++ b/app/views/index/myProjectList.scala.html
@@ -37,7 +37,7 @@
             <div class="search-result">
                 <div class="tab-pane myproject-list-wrap active" >
                     <div class="group">
-                        <input class="search-input project-search" type="text" id="query" autofocus autocomplete="off" placeholder="@Messages("title.type.name")">
+                        <input class="search-input project-search" type="text" id="query" autocomplete="off" placeholder="@Messages("title.type.name")">
                         <span class="bar"></span>
                     </div>
                     <div class="subtab-wrap">
