usermenu: Change some subtle styles
- Decrease input text font size
- Increase usermenu sidebar size 400px -> 420px
- Remove redundant codes

and so on..

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1132,7 +1132,7 @@
 
                         .message-wrap {
                             margin-top:3px;
-                            font-size:14px;
+                            font-size:13px;
                             color:#888;
                             overflow:hidden;
                             line-height:20px;
@@ -6630,4 +6630,5 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 
 .right-menu{
     margin-left: 10px;
+    width: 400px;
 }
