--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -531,7 +531,7 @@ span.issue-label {
             a {
                 text-decoration: none;
                 background-color: @primary;
-                color: #fcfcfc;
+                color: #fcfcfc !important;
                 border-bottom: 1px solid @primary;
                 border-radius: 3px;
             }
