--- a/app/views/index/index.scala.html
+++ b/app/views/index/index.scala.html
@@ -52,13 +52,13 @@
             </div>
             <div class="page on-fold-intro">
                 <div class="row-fluid content-container">
-                    <div class="span7 main-stream">
+                    <div class="span8 main-stream">
                         @views.html.common.mySeriesMenuTab(TAB_NOTI)
                         <ul class="activity-streams notification-wrap unstyled">
                             @partial_notifications(0, 20)
                         </ul>
         	        </div>
-                    <div class="span5 index-menu right-menu span-hard-wrap">
+                    <div class="span4 index-menu right-menu span-hard-wrap">
         	       </div>
                 </div>
             </div>
@@ -117,11 +117,12 @@
             });
 
             // Show side bar menu default and focus to search box
+            // Also, see layout.scala.html for normal user menu click !!
             var requiredLoggedIn = $("#required-logged-in").length === 1;
             if(!requiredLoggedIn){
                 var viewSize = $(window).width();
                 if( viewSize > 720) {
-                    $("#mySidenav").width("400px").css("border", "1px solid #ccc");
+                    $("#mySidenav").width("420px").css("border", "1px solid #ccc");
                     setTimeout(function () {
                         $("#main").off("click");
                     }, 1000);
