notification-list: Align 'updated' stream type icon width

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1076,8 +1076,9 @@
                         color: white;
                         border: 1px solid;
                         border-radius: 3px;
-                        padding: 2px;
+                        padding: 0 2px;
                         background-color: #FF9800;
+                        width: 26px;
                     }
 
                     &.closed {color:@state-closed;}
