admin: Fix admin warning affix head css disorder

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6391,9 +6391,10 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 }
 
 .admin-logged-in-affix {
-  z-index:999;
+  z-index: 1000;
   padding: 10px 10px;
   width:100%;
+  box-sizing: border-box;
   color:white;
   font-size:20px;
   background-color: #ad0000;
