--- a/app/views/index/index.scala.html
+++ b/app/views/index/index.scala.html
@@ -131,6 +131,10 @@
                 }
                 $(".search-input").focus();
             }
+
+            if ($(".admin-logged-in-affix").length === 1) {
+                $(".sidenav").css("top", "84px");
+            }
         });
     </script>
 }
