--- a/app/assets/stylesheets/less/_usermenu.less
+++ b/app/assets/stylesheets/less/_usermenu.less
@@ -44,12 +44,26 @@
   }
   a:hover {
     color: white;
+    text-decoration: none;
   }
 }
 
 .user-project-list {
-  ul.unstyled > li {
+  ul.nav-subtab > li {
     border: none;
+  }
+
+  li {
+    border-bottom: 1px solid #eee;
+    margin-left: 0;
+  }
+
+  .subtab-group {
+    padding: 10px 0 5px 0;
+  }
+
+  ul {
+    display: inline-block;
   }
 
   .result-snackbar {
@@ -67,6 +81,11 @@
   }
 
   .user-li {
+    color: #000;
+    &:hover {
+      color: #3592B5;
+    }
+    cursor: pointer;
   }
 
   .user-search-form{
@@ -361,7 +380,6 @@
     img {
       width: 24px;
       border-radius: 3px;
-      border: 1px solid #ececec;
       margin-right: 3px;
       height: auto;
     }
@@ -378,7 +396,6 @@
     height: 55px;
   }
 
-
   .oss {
     background-color: #fff !important;
     margin-top: -2px;
@@ -390,12 +407,6 @@
 
   .yobi-logo {
     width: 33px;
-  }
-
-  li {
-    margin-left : 3px;
-    margin-right : 3px;
-    border-bottom: 1px solid #eee;
   }
 
   .flex-container {
@@ -430,16 +441,22 @@
       padding: 5px;
     }
     .project-name{
-      color: #000;
       word-wrap: break-word;
       min-width: 50px;
       max-width: 220px;
       text-overflow: ellipsis;
       overflow: hidden;
-      a:hover {
-        color: #4183c4;
+      &.org-name {
+        max-width: 320px;
+      }
+      a {
+        &:hover {
+          text-decoration: none;
+          color: #3592B5;
+        }
       }
     }
+
     .project-owner {
       color: grey;
       padding-right: 10px;
@@ -450,8 +467,9 @@
       overflow: hidden;
       max-width: 100px;
       a {
-        color: inherit;
-        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
@@ -464,6 +482,7 @@
     align-items: center;
     flex-grow: 1;
     overflow: hidden;
+    padding: 5px 0;
   }
 
   .page-list-item {
@@ -671,4 +690,69 @@
   }
 
 }
+
+// Sidebar settings
+
+#main {
+  margin: 0;
+  padding: 0;
+  transition: margin-left .5s;
+}
+
+/* The side navigation menu */
+#mySidenav {
+  width: 0; /* 0 width - change this with JavaScript */
+  position: absolute; /* Stay in place */
+  z-index: 999;
+  top: 40px;
+  right: 0;
+  box-shadow: 2px 2px 10px #888;
+  background-color: white;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  overflow-y: auto;
+  padding-top: 10px;
+
+  &::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+    background: #fff;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #d7d4cb;
+  }
+}
+
+
+
+/* The navigation menu links */
+.sidenav {
+  div.user-menu-wrap{
+    text-align: right;
+  }
+
+  span.user-menu {
+    padding: 5px;
+    color: black;
+  }
+}
+
+.nav-subtab.unstyled {
+  color: black;
+  background-color: #eee;
+  a:hover {
+    color: black;
+  }
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+
 
