code-browser: Fix subtle margin at breadcrumbs
See: Yona github issue #94
https://github.com/yona-projects/yona/issues/94#issuecomment-274714963

--- a/app/views/code/view.scala.html
+++ b/app/views/code/view.scala.html
@@ -86,8 +86,7 @@
                 }
                 </select>
                 <div id="breadcrumbs" class="code-breadcrumb-wrap ml10 pull-left">
-                    <a href="@routes.CodeApp.codeBrowserWithBranch(project.owner, project.name, URLEncoder.encode(branch, "UTF-8"), "")">@project.name</a>
-                    @makeBreadCrumbs(path)
+                    <a href="@routes.CodeApp.codeBrowserWithBranch(project.owner, project.name, URLEncoder.encode(branch, "UTF-8"), "")">@project.name</a>@makeBreadCrumbs(path)
                 </div>
                 @if(project.isGit) {
                 <div class="pull-right">
