usermenu: Make more robust usermenu click action

--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -28,7 +28,7 @@
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("javascripts/lib/select2/select2.css")"/>
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("javascripts/lib/pikaday/pikaday.css")" />
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("stylesheets/yobi.css")">
-<link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("stylesheets/list.css")">
+<link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("stylesheets/usermenu.css")">
 <link rel='stylesheet' href="@routes.Assets.at("javascripts/lib/nprogress/nprogress.css")"/>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/yona-layout.js")"></script>
 
@@ -59,6 +59,7 @@
             });
 
             $("#sidebar-open-btn").on("click", function (event) {
+                event.stopPropagation();
                 if( $sidebar.width() !== 0){
                     closeSidebar($sidebar);
                 } else {
