--- a/app/views/index/myOrganizationList.scala.html
+++ b/app/views/index/myOrganizationList.scala.html
@@ -9,7 +9,7 @@
 
 @displayProjects(title:String, organizations:List[Organization], isActive:Boolean = false) = {
 @if(organizations.isEmpty) {
-    <div id='no-result' class="no-result">No results</div>
+    <div id="@title" class="no-result tab-pane user-ul @if(isActive){active}">@Messages("title.no.results")</div>
 } else {
     <ul class="tab-pane user-ul @if(isActive){active}" id="@title">
     @for(organization <- organizations){
@@ -19,14 +19,13 @@
                     <div class="flex-item site-logo">
                         <i class="project-avatar">@if(hasOrganizationLogo(organization)){<img class="logo" src="@urlToOrganizationLogo(organization)">}else{<span class="dummy-25px"> </span>}</i>
                     </div>
-                    <div class="projectName-owner flex-item">
-                        <div class="project-name flex-item"><a href="@routes.OrganizationApp.organization(organization.name)" >@organization.name</a></div>
+                    <div class="projectName-owner flex-item" onclick="window.location='@routes.OrganizationApp.organization(organization.name)';">
+                        <div class="project-name org-name flex-item"><a href="@routes.OrganizationApp.organization(organization.name)">@organization.name</a></div>
+                        <div class="project-owner flex-item"></div>
                     </div>
                 </div>
                 <div class="star-project flex-item">
-                    <label>
-                        <i class="star material-icons">star</i>
-                    </label>
+                    <i class="star material-icons">star</i>
                 </div>
             </div>
         </li>
@@ -37,7 +36,7 @@
 
     <div class="search-result">
         <div class="group">
-            <input class="search-input org-search" type="text" id="query" autocomplete="off" placeholder="Type name">
+            <input class="search-input org-search" type="text" id="query" autocomplete="off" placeholder="@Messages("title.type.name")">
             <span class="bar"></span>
         </div>
         @displayProjects("recentlyVisited", Organization.findOrganizationsByUserLoginId(UserApp.currentUser.loginId))
