--- a/app/views/index/myProjectList.scala.html
+++ b/app/views/index/myProjectList.scala.html
@@ -13,14 +13,14 @@
     } else {
         <ul class="tab-pane user-ul @if(isActive){active}" id="@title">
         @for(project <- projects){
-            <li class="user-li">
+            <li class="user-li" onclick="window.location='@routes.ProjectApp.project(project.owner, project.name)';">
                 <div class="project-list project-flex-container">
                     <div class="project-item project-item-container">
                         <div class="flex-item site-logo">
                             <i class="project-avatar">@if(hasProjectLogo(project)){<a href="@routes.ProjectApp.project(project.owner, project.name)" ><img class="logo" src="@urlToProjectLogo(project)"></a>}else{<span class="dummy-25px"> </span>}</i>
                         </div>
                         <div class="projectName-owner flex-item">
-                            <div class="project-name flex-item"><a href="@routes.ProjectApp.project(project.owner, project.name)" >@project.name @if(project.isPrivate){<i class="yobicon-lock yobicon-small"></i>}</a></div>
+                            <div class="project-name flex-item"><a href="@routes.ProjectApp.project(project.owner, project.name)">@project.name @if(project.isPrivate){<i class="yobicon-lock yobicon-small"></i>}</a></div>
                             <div class="project-owner flex-item"><a href="@routes.UserApp.userInfo(project.owner)" >@project.owner</a></div>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                         <input class="search-input project-search" type="text" id="query" autocomplete="off" placeholder="@Messages("title.type.name")">
                         <span class="bar"></span>
                     </div>
-                    <div class="subtab-wrap">
+                    <div class="subtab-wrap subtab-group">
                         <ul class="nav-subtab unstyled">
                             <li class="active">
                                 <a href="#recentlyVisited" data-toggle="tab">
