access-rule: Make user can see original content text
Now, users with read permission can view original text.
It is useful when someone want to see text and copy it.

--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -1135,8 +1135,8 @@ span.issue-label {
     background:transparent;
     border:0;
     outline:none;
-    font-size:0px;
-    line-height:normal;
+    font-size:0;
+    line-height:20px;
 }
 
 .numberic {
