--- a/app/views/board/edit.scala.html
+++ b/app/views/board/edit.scala.html
@@ -86,7 +86,8 @@
               </label>
             </span>
           }
-          <button class="ybtn ybtn-info" tabindex="3">@Messages("button.save")</button><!--
+          @if(isAllowed(UserApp.currentUser(), posting.asResource(), Operation.UPDATE)) {
+          <button class="ybtn ybtn-info" tabindex="3">@Messages("button.save")</button>}<!--
          --><a href="javascript:history.back();" class="ybtn" tabindex="4">@Messages("button.cancel")</a>
         </div>
       </div>
