--- a/app/views/common/commentUpdateForm.scala.html
+++ b/app/views/common/commentUpdateForm.scala.html
@@ -1,24 +1,11 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2014 NAVER Corp.
-* http://yobi.io
-*
-* @author Suwon Chae
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(comment:Comment, action:String, contents:String)
+@import utils.AccessControl._
 
 <div id="comment-editform-@comment.id" class="comment-update-form">
     <form action="@action" method="post">
@@ -38,7 +25,9 @@
                     </span>
                     }
                     <button type="button" class="ybtn ybtn-cancel" data-comment-id="@comment.id">@Messages("button.cancel")</button>
-                    <button type="submit" class="ybtn ybtn-info">@Messages("button.save")</button>
+                    @if(isAllowed(UserApp.currentUser(), comment.asResource(), Operation.UPDATE)) {
+                        <button type="submit" class="ybtn ybtn-info">@Messages("button.save")</button>
+                    }
                 </div>
             </div>
         </div>
